// Copyright (c) 2017, Christopher Patton.
// All rights reserved.
syntax = "proto3";

package pb;

// Parameters needed by store.PubDict and store.PrivDict.
message Params {
  int32 table_len = 1;
  int32 max_output_bytes = 2;
  int32 row_bytes = 3;
  int32 tag_bytes = 4;
  int32 salt_bytes = 5;
  bytes salt = 6;
  bool pad = 7;
}

// A compressed representation of store.PubDict.
message Dict {
  Params params = 1;
  bytes table = 2;
  repeated int32 idx = 3;
}

// A compressed representation of store.PubStore.
message Store {
  message AdjList {
    repeated int32 edge = 1;
  }
  repeated AdjList adj_list = 1;
  repeated int32 node = 2;
  int32 node_ct = 3;

  repeated bytes sealed = 4;

  Dict dict = 5;
}

// Errors output by the remote procedure calls.
enum StoreProviderError {
  OK = 0;
  BAD_USER = 1;
  INDEX = 2;
  ITEM_NOT_FOUND = 3;
}

// Definition for the storage provider storage. The StoreProvider stores a map
// from user IDs to his/her public store. This service permits the client to get
// the parameters with the PubStore and to request shares.
service StoreProvider {
  rpc GetShare (ShareRequest) returns (ShareReply) {}
  rpc GetParams (ParamsRequest) returns (ParamsReply) {}
}

// The share request message.
message ShareRequest {
  string user_id = 1;
  int32 x = 2;
  int32 y = 3;
}

// The share response message.
message ShareReply {
  bytes pub_share = 1;
  StoreProviderError error = 2;
}

// The parameters request message.
message ParamsRequest {
  string user_id = 1;
}

// The parameters response message.
message ParamsReply {
  Params params = 1;
  StoreProviderError error = 2;
}
