
syntax = "proto3";

package store;

message StoreParams {
  int32 table_len = 1;
  int32 max_output_bytes = 2;
  int32 row_bytes = 3;
  int32 tag_bytes = 4;
  int32 salt_bytes = 5;
  bytes salt = 6;
}

message StoreTable {
  StoreParams params = 1;
  bytes table = 2;
  repeated int32 idx = 3;
}

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}
